// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withField validation errors should clear error message when update the field value 1`] = `
<div>
  <form>
    <div
      class="field"
    >
      <div
        class="input"
      >
        <input
          class=""
          name="fieldName"
          value="100"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`withField validation errors should render an error message 1`] = `
<div>
  <form>
    <div
      class="field error"
    >
      <div
        class="input"
      >
        <input
          class=""
          name="fieldName"
          value="Some invalid text"
        />
      </div>
      <span
        class="field--error-msg"
      >
        Field must be a number
      </span>
    </div>
  </form>
</div>
`;
